--- a/package.json
+++ b/package.json
@@ -25,20 +25,20 @@
   "author": "Nordic Semiconductor ASA | nordicsemi.no",
   "license": "BSD-3-Clause",
   "dependencies": {
-    "aws-sdk": "2.799.0"
+    "aws-sdk": "2.804.0"
   },
   "devDependencies": {
     "@bifravst/code-style": "8.0.134",
-    "@bifravst/eslint-config-typescript": "^5.0.78",
+    "@bifravst/eslint-config-typescript": "5.0.80",
     "@commitlint/cli": "11.0.0",
     "@commitlint/config-angular": "11.0.0",
     "@types/backoff": "2.5.1",
-    "@types/jest": "26.0.15",
+    "@types/jest": "26.0.16",
     "@types/node": "14.14.10",
-    "eslint": "^7.14.0",
-    "husky": "4.3.0",
+    "eslint": "7.15.0",
+    "husky": "4.3.5",
     "jest": "26.6.3",
-    "lint-staged": "^10.5.2",
+    "lint-staged": "10.5.3",
     "prettier": "2.2.1",
     "ts-jest": "26.4.4",
     "typescript": "4.1.2"
