--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "author": "Nordic Semiconductor ASA | nordicsemi.no",
   "license": "BSD-3-Clause",
   "dependencies": {
-    "aws-sdk": "2.820.0"
+    "@aws-sdk/client-timestream-query": "^3.1.0"
   },
   "devDependencies": {
     "@bifravst/code-style": "8.0.134",
@@ -39,7 +39,7 @@
     "husky": "4.3.6",
     "jest": "26.6.3",
     "lint-staged": "10.5.3",
-    "prettier": "2.2.1",
+    "prettier": "^2.2.1",
     "ts-jest": "26.4.4",
     "typescript": "4.1.3"
   },
