--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bifravst/timestream-helpers",
+  "name": "@nordicsemiconductor/timestream-helpers",
   "version": "0.0.0-development",
   "description": "Helper functions which simplify working with AWS Timestream",
   "main": "dist/index.js",
@@ -9,30 +9,29 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bifravst/timestream-helpers.git"
+    "url": "git+https://github.com/NordicSemiconductor/cloud-aws-timestream-helpers-js.git"
   },
   "bugs": {
-    "url": "https://github.com/bifravst/timestream-helpers/issues"
+    "url": "https://github.com/NordicSemiconductor/cloud-aws-timestream-helpers-js/issues"
   },
-  "homepage": "https://github.com/bifravst/timestream-helpers",
+  "homepage": "https://github.com/NordicSemiconductor/cloud-aws-timestream-helpers-js",
   "keywords": [
     "Cloud",
     "IoT",
-    "Bifravst",
-    "Asset Tracker",
-    "NordicSemiconductor"
+    "Asset Tracker Cloud Example",
+    "Nordic Semiconductor"
   ],
   "author": "Nordic Semiconductor ASA | nordicsemi.no",
   "license": "BSD-3-Clause",
   "dependencies": {
-    "@aws-sdk/client-timestream-query": "^3.1.0",
-    "@aws-sdk/client-timestream-write": "^3.1.0"
+    "@aws-sdk/client-timestream-query": "3.4.1",
+    "@aws-sdk/client-timestream-write": "3.4.1"
   },
   "devDependencies": {
-    "@bifravst/code-style": "8.0.134",
-    "@bifravst/eslint-config-typescript": "5.0.90",
     "@commitlint/cli": "11.0.0",
     "@commitlint/config-angular": "11.0.0",
+    "@nordicsemiconductor/asset-tracker-cloud-code-style": "9.0.0",
+    "@nordicsemiconductor/eslint-config-asset-tracker-cloud-typescript": "^7.0.0",
     "@types/backoff": "2.5.1",
     "@types/jest": "26.0.20",
     "@types/node": "14.14.22",
