--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "husky install",
+    "prepublishOnly": "pinst --disable",
+    "postpublish": "pinst --enable"
   },
   "repository": {
     "type": "git",
@@ -36,18 +39,13 @@
     "@types/jest": "26.0.20",
     "@types/node": "14.14.25",
     "eslint": "7.19.0",
-    "husky": "4.3.8",
+    "husky": "^5.0.9",
     "jest": "26.6.3",
     "lint-staged": "10.5.4",
+    "pinst": "^2.1.4",
     "prettier": "2.2.1",
     "ts-jest": "26.5.0",
     "typescript": "4.1.3"
-  },
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "pre-commit": "lint-staged && npx jest --onlyChanged"
-    }
   },
   "lint-staged": {
     "*.ts": [
