--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "keywords": [
     "Cloud",
     "IoT",
-    "Asset Tracker Cloud Example",
+    "nRF Asset Tracker",
     "Nordic Semiconductor"
   ],
   "author": "Nordic Semiconductor ASA | nordicsemi.no",
