--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
   ],
   "author": "Nordic Semiconductor ASA | nordicsemi.no",
   "license": "BSD-3-Clause",
-  "dependencies": {
-    "@aws-sdk/client-timestream-query": "3.47.1",
-    "@aws-sdk/client-timestream-write": "3.47.1"
+  "peerDependencies": {
+    "@aws-sdk/client-timestream-query": ">= 3 < 4",
+    "@aws-sdk/client-timestream-write": ">= 3 < 4"
   },
   "devDependencies": {
     "@nordicsemiconductor/asset-tracker-cloud-code-style": "11.0.12",
