--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
   "license": "BSD-3-Clause",
   "peerDependencies": {
     "@aws-sdk/client-timestream-query": ">= 3 < 4",
-    "@aws-sdk/client-timestream-write": ">= 3 < 4"
+    "@aws-sdk/client-timestream-write": ">= 3 < 4",
+    "@types/uuid": ">= 8 < 9",
+    "uuid": ">= 8 < 9"
   },
   "devDependencies": {
     "@nordicsemiconductor/asset-tracker-cloud-code-style": "11.0.21",
