--- a/package.json
+++ b/package.json
@@ -26,15 +26,13 @@
   "license": "BSD-3-Clause",
   "peerDependencies": {
     "@aws-sdk/client-timestream-query": ">= 3 < 4",
-    "@aws-sdk/client-timestream-write": ">= 3 < 4",
-    "@types/uuid": ">= 8 < 9",
-    "uuid": ">= 8 < 9"
+    "@aws-sdk/client-timestream-write": ">= 3 < 4"
   },
   "devDependencies": {
     "@nordicsemiconductor/asset-tracker-cloud-code-style": "11.0.21",
     "@types/backoff": "2.5.2",
     "@types/jest": "27.4.0",
-    "@types/node": "16.11.24",
+    "@types/node": "17.0.17",
     "jest": "27.5.1",
     "ts-jest": "27.1.3"
   },
