--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
   },
   "devDependencies": {
     "@nordicsemiconductor/asset-tracker-cloud-code-style": "11.0.61",
+    "@swc/jest": "0.2.20",
     "@types/backoff": "2.5.2",
     "@types/jest": "27.5.0",
     "@types/node": "17.0.18",
-    "jest": "28.0.3",
-    "ts-jest": "27.1.4"
+    "jest": "28.0.3"
   },
   "lint-staged": {
     "*.ts": [
@@ -69,7 +69,11 @@
     "README.md"
   ],
   "jest": {
-    "preset": "ts-jest",
+    "transform": {
+      "^.+\\.(t|j)sx?$": [
+        "@swc/jest"
+      ]
+    },
     "testRegex": ".+\\.spec\\.ts$"
   }
 }
