--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@aws-sdk/client-timestream-write": ">= 3 < 4"
   },
   "devDependencies": {
+    "@commitlint/config-conventional": "17.8.0",
     "@nordicsemiconductor/asset-tracker-cloud-code-style": "12.0.98",
     "@swc/jest": "0.2.29",
     "@types/backoff": "2.5.3",
