--- a/package.json
+++ b/package.json
@@ -29,10 +29,16 @@
   "devDependencies": {
     "@commitlint/config-conventional": "17.8.0",
     "@nordicsemiconductor/asset-tracker-cloud-code-style": "12.0.98",
+    "@nordicsemiconductor/eslint-config-asset-tracker-cloud-typescript": "16.0.23",
     "@swc/jest": "0.2.29",
     "@types/backoff": "2.5.3",
     "@types/jest": "29.5.5",
     "@types/node": "18.18.5",
+    "@typescript-eslint/eslint-plugin": "6.8.0",
+    "eslint-config-prettier": "9.0.0",
+    "eslint-plugin-import": "2.28.1",
+    "eslint-plugin-prefer-arrow": "1.2.3",
+    "eslint-plugin-unicorn": "48.0.1",
     "jest": "29.7.0"
   },
   "lint-staged": {
