--- a/package.json
+++ b/package.json
@@ -2,11 +2,18 @@
   "name": "@nordicsemiconductor/timestream-helpers",
   "version": "0.0.0-development",
   "description": "Helper functions which simplify working with AWS Timestream",
-  "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "node": "./dist/index.js"
+    }
+  },
+  "type": "module",
   "scripts": {
-    "test": "jest",
-    "prepare": "husky install"
+    "test": "tsx --no-warnings --test ./src/*.spec.ts",
+    "prepare": "husky install",
+    "prepublishOnly": "npx tsc --noEmit false --outDir ./dist -d"
   },
   "repository": {
     "type": "git",
@@ -30,16 +37,14 @@
     "@commitlint/config-conventional": "17.8.0",
     "@nordicsemiconductor/asset-tracker-cloud-code-style": "12.0.98",
     "@nordicsemiconductor/eslint-config-asset-tracker-cloud-typescript": "16.0.23",
-    "@swc/jest": "0.2.29",
     "@types/backoff": "2.5.3",
-    "@types/jest": "29.5.5",
-    "@types/node": "18.18.5",
+    "@types/node": "20.8.6",
     "@typescript-eslint/eslint-plugin": "6.8.0",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-import": "2.28.1",
     "eslint-plugin-prefer-arrow": "1.2.3",
     "eslint-plugin-unicorn": "48.0.1",
-    "jest": "29.7.0"
+    "tsx": "3.13.0"
   },
   "lint-staged": {
     "*.ts": [
@@ -51,7 +56,7 @@
     ]
   },
   "engines": {
-    "node": ">=18",
+    "node": ">=20",
     "npm": ">=9"
   },
   "release": {
@@ -85,12 +90,5 @@
     "LICENSE",
     "README.md"
   ],
-  "jest": {
-    "transform": {
-      "^.+\\.(t|j)sx?$": [
-        "@swc/jest"
-      ]
-    },
-    "testRegex": ".+\\.spec\\.ts$"
-  }
+  "prettier": "@nordicsemiconductor/asset-tracker-cloud-code-style/.prettierrc"
 }
