--- a/.github/workflows/test-and-release.yaml
+++ b/.github/workflows/test-and-release.yaml
@@ -26,6 +26,12 @@ jobs:
         run: npm ci --no-audit
       - name: Compile
         run: npx tsc
+      - name: Check source code with eslint
+        run:
+          npx eslint --fix --ext .js,.ts,.jsx,.tsx --ignore-pattern
+          commitlint.config.js --ignore-path .gitignore ./
+      - name: Check if source code is properly formatted
+        run: npx prettier -c ./
       - name: Test
         run: npm test
       - name: Semantic release
