--- a/.github/workflows/test-and-release.yaml
+++ b/.github/workflows/test-and-release.yaml
@@ -27,9 +27,7 @@ jobs:
       - name: Compile
         run: npx tsc
       - name: Check source code with eslint
-        run:
-          npx eslint --fix --ext .js,.ts,.jsx,.tsx --ignore-pattern
-          commitlint.config.js --ignore-path .gitignore ./
+        run: npx eslint .
       - name: Check if source code is properly formatted
         run: npx prettier -c ./
       - name: Test
