--- a/package.json
+++ b/package.json
@@ -34,23 +34,18 @@
     "@aws-sdk/client-timestream-write": ">= 3 < 4"
   },
   "devDependencies": {
+    "@bifravst/eslint-config-typescript": "6.0.4",
     "@bifravst/prettier-config": "1.0.0",
     "@commitlint/config-conventional": "18.6.2",
-    "@nordicsemiconductor/eslint-config-asset-tracker-cloud-typescript": "17.0.0",
     "@types/backoff": "2.5.5",
     "@types/node": "20.11.19",
-    "@typescript-eslint/eslint-plugin": "7.0.1",
-    "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-prefer-arrow": "1.2.3",
-    "eslint-plugin-unicorn": "51.0.1",
     "husky": "9.0.11",
     "tsx": "4.7.1"
   },
   "lint-staged": {
     "*.ts": [
       "prettier --write",
-      "eslint --ext .js,.ts"
+      "eslint"
     ],
     "*.{md,json,yaml,yml}": [
       "prettier --write"
