--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
   "license": "BSD-3-Clause",
   "peerDependencies": {
     "@aws-sdk/client-timestream-query": ">= 3 < 4",
-    "@aws-sdk/client-timestream-write": ">= 3 < 4"
+    "@aws-sdk/client-timestream-write": ">= 3 < 4",
+    "cat": "^0.2.0",
+    "package.json": "^2.0.1"
   },
   "devDependencies": {
     "@bifravst/eslint-config-typescript": "6.1.9",
@@ -39,7 +41,9 @@
     "@commitlint/config-conventional": "19.2.2",
     "@types/backoff": "2.5.5",
     "@types/node": "20.14.10",
+    "cat": "*",
     "husky": "9.0.11",
+    "package.json": "*",
     "tsx": "4.16.2"
   },
   "lint-staged": {
